--- a/Loops_Questions/papa.html
+++ b/Loops_Questions/papa.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tester</title>
-    <script src="sum_of_odd_no.js"></script>
+    <script src="sum_of_prime_numbers.js"></script>
 </head>
 <body>
     
