--- a/Loops_Questions/papa.html
+++ b/Loops_Questions/papa.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tester</title>
-    <!-- <script src="prime_by_user.js"></script> -->
+    <script src="prime_by_user.js"></script>
     <!-- <script src="sum_of_odd_no.js"></script> -->
     <!-- <script src="sum_of_prime_numbers.js"></script> -->
     <!-- <script src="series_run_times_acc_to_user.js"></script> -->
     <!-- <script src="square_of_natural_no_nd_sum.js"></script> -->
     <!-- <script src="experiment.js"></script> -->
-    <script src="pattern1.js"></script>
+    <!-- <script src="pattern1.js"></script> -->
 </head>
 <body>
     
