--- a/Array/array_input.html
+++ b/Array/array_input.html
@@ -7,6 +7,7 @@
     <title>Array Input</title>
     <link rel="stylesheet" href="array_input.css">
     <script src="array_input.js" defer></script>
+    <!-- <script src="making_push.js" defer></script> -->
   </head>
   <body>
     <div class="container">
