--- a/Array/index.html
+++ b/Array/index.html
@@ -5,7 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="four-D_Array_Armstrong_Prime.js"></script>
+    <!-- <script src="four-D_Array_Armstrong_Prime.js"></script> -->
+    <!-- <script src="making_push.js"></script> -->
+    <!-- <script src="array_for_loop.js"></script> -->
+    <script src="concatination.js"></script>
 </head>
 <body>
     
