--- a/Array/papa.html
+++ b/Array/papa.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arry</title>
     <script src="q1.js"></script>
+    <!-- <script src="q2.js"></script> -->
 </head>
 <body>
     
