--- a/Loops_Questions/papa.html
+++ b/Loops_Questions/papa.html
@@ -7,9 +7,11 @@
     <title>Tester</title>
     <!-- <script src="prime_by_user.js"></script> -->
     <!-- <script src="sum_of_odd_no.js"></script> -->
-    <script src="sum_of_prime_numbers.js"></script>
+    <!-- <script src="sum_of_prime_numbers.js"></script> -->
     <!-- <script src="series_run_times_acc_to_user.js"></script> -->
     <!-- <script src="square_of_natural_no_nd_sum.js"></script> -->
+    <script src="/Array/array_concat.js"></script>
+
 </head>
 <body>
     
