--- a/Functions/reversingString.html
+++ b/Functions/reversingString.html
@@ -1,21 +1,24 @@
+<!-- Write a function that takes a string as an argument and returns the string
+reversed. -->
+
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <script>
-        function strRev(str) {
-            let reverseStr = '';
-            for(let i = str.length - 1; i >= 0; i--){
-                reverseStr += str[i];
-            }
-            return reverseStr
+      function strRev(str) {
+        let reverseStr = "";
+        for (let i = str.length - 1; i >= 0; i--) {
+          reverseStr += str[i];
         }
-        console.log(strRev('hello'));
+        return reverseStr;
+      }
+      console.log(strRev("hello"));
     </script>
-</body>
+  </body>
 </html>
