ShipRocketAPI task completed

--- a/ShipRocketAPI/index.html
+++ b/ShipRocketAPI/index.html
@@ -131,7 +131,7 @@
                         <label for="" class="form-label">
                             Billing Pincode
                         </label>
-                        <input type="text" class="form-control" name="billing_pincode" id="billing_pincode" placeholder="Billing Pincode">
+                        <input type="number" class="form-control" name="billing_pincode" id="billing_pincode" placeholder="Billing Pincode">
                     </div>
                     <!-- billing state -->
                     <div class="mb-3">
@@ -159,8 +159,176 @@
                         <label for="" class="form-label">
                             Billing Phone
                         </label>
-                        <input type="text" class="form-control" name="billing_phone" id="billing_phone" placeholder="Billing Phone">
+                        <input type="number" class="form-control" name="billing_phone" id="billing_phone" placeholder="Billing Phone">
                     </div>
+
+                    <!-- miscellaneous -->
+                    <!-- channel_id -->
+                    <div class="mb-3">
+                        <label for="" class="form-label">
+                            Channel ID
+                        </label>
+                        <input type="number" class="form-control" name="channel_id" id="channel_id" placeholder="Channel ID">
+                    </div>
+
+                    <!-- shipping customer name -->
+                    <div class="mb-3">
+                        <label for="" class="form-label">
+                            Shipping Customer Name
+                        </label>
+                        <input type="text" class="form-control" name="shipping_customer_name" id="shipping_customer_name" placeholder="Shipping Customer Name">
+                    </div>
+                    <!-- shipping last name -->
+                    <div class="mb-3">
+                        <label for="" class="form-label">
+                            Shipping Last Name
+                        </label>
+                        <input type="text" class="form-control" name="shipping_last_name" id="shipping_last_name" placeholder="Shipping Last Name">
+                    </div>
+
+                    <!-- shipping address -->
+                    <div class="mb-3">
+                        <label for="" class="form-label">
+                            Shipping Address
+                        </label>
+                        <input type="text" class="form-control" name="shipping_address" id="shipping_address" placeholder="Shipping Address">
+                    </div>
+                    <!-- shipping address 2 -->
+                    <div class="mb-3">
+                        <label for="" class="form-label">
+                            Shipping Address 2
+                        </label>
+                        <input type="text" class="form-control" name="shipping_address_2" id="shipping_address_2" placeholder="Shipping Address 2">
+                    </div>
+                    <!-- shipping city -->
+                    <div class="mb-3">
+                        <label for="" class="form-label">
+                            Shipping City
+                        </label>
+                        <input type="text" class="form-control" name="shipping_city" id="shipping_city" placeholder="Shipping City">
+                    </div>
+                    <!-- shipping pincode -->
+                    <div class="mb-3">
+                        <label for="" class="form-label">
+                            Shipping Pincode
+                        </label>
+                        <input type="number" class="form-control" name="shipping_pincode" id="shipping_pincode" placeholder="Shipping Pincode">
+                    </div>
+                    <!-- shipping state -->
+                    <div class="mb-3">
+                        <label for="" class="form-label">
+                            Shipping State
+                        </label>
+                        <input type="text" class="form-control" name="shipping_state" id="shipping_state" placeholder="Shipping State">
+                    </div>
+                    <!-- shipping country -->
+                    <div class="mb-3">
+                        <label for="" class="form-label">
+                            Shipping Country
+                        </label>
+                        <input type="text" class="form-control" name="shipping_country" id="shipping_country" placeholder="Shipping Country">
+                    </div>
+                    <!-- shipping email -->
+                    <div class="mb-3">
+                        <label for="" class="form-label">
+                            Shipping Email
+                        </label>
+                        <input type="text" class="form-control" name="shipping_email" id="shipping_email" placeholder="Shipping Email">
+                    </div>
+                    <!-- shipping phone -->
+                    <div class="mb-3">
+                        <label for="" class="form-label">
+                            Shipping Phone
+                        </label>
+                        <input type="number" class="form-control" name="shipping_phone" id="shipping_phone" placeholder="Shipping Phone">
+                        
+                    </div>
+                    <!-- discount -->
+                    <div class="mb-3">
+                        <label for="" class="form-label">
+                            Discount
+                        </label>
+                        <input type="number" class="form-control" name="discount" id="discount" placeholder="Discount">
+                    </div>
+                    <!-- tax -->
+                    <div class="mb-3">
+                        <label for="" class="form-label">
+                            Tax
+                        </label>
+                        <input type="number" class="form-control" name="tax" id="tax" placeholder="Tax">
+                    </div>
+
+                    <!-- Payment method -->
+                    <div class="mb-3">
+                        <label for="" class="form-label">
+                            Payment Method
+                        </label>
+                        <input type="text" class="form-control" name="payment_method" id="payment_method" placeholder="Payment Method">
+                    </div>
+                    <!-- shipping charge -->
+                    <div class="mb-3">
+                        <label for="" class="form-label">
+                            Shipping Charge
+                        </label>
+                        <input type="number" class="form-control" name="shipping_charge" id="shipping_charge" placeholder="Shipping Charge">
+                    </div>
+                    <!-- giftwrap charges -->
+                    <div class="mb-3">
+                        <label for="" class="form-label">
+                            Giftwrap Charges
+                        </label>
+                        <input type="number" class="form-control" name="giftwrap_charges" id="giftwrap_charges" placeholder="Giftwrap Charges">
+                    </div>
+                    <!-- transaction charges -->
+                    <div class="mb-3">
+                        <label for="" class="form-label">
+                            Transaction Charges
+                        </label>
+                        <input type="number" class="form-control" name="transaction_charges" id="transaction_charges" placeholder="Transaction Charges">
+                    </div>
+                    <!-- total discount -->
+                    <div class="mb-3">
+                        <label for="" class="form-label">
+                            Total Discount
+                        </label>
+                        <input type="number" class="form-control" name="total_discount" id="total_discount" placeholder="Total Discount">
+                    </div>
+                    <!-- sub total -->
+                    <div class="mb-3">
+                        <label for="" class="form-label">
+                            Sub Total
+                        </label>
+                        <input type="number" class="form-control" name="sub_total" id="sub_total" placeholder="Sub Total">
+                    </div>
+                    <!-- length -->
+                    <div class="mb-3">
+                        <label for="" class="form-label">
+                            Length
+                        </label>
+                        <input type="number" class="form-control" name="length" id="length" placeholder="Length">
+                    </div>
+                    <!-- breadth -->
+                    <div class="mb-3">
+                        <label for="" class="form-label">
+                            Breadth
+                        </label>
+                        <input type="number" class="form-control" name="breadth" id="breadth" placeholder="Breadth">
+                    </div>
+                    <!-- height -->
+                    <div class="mb-3">
+                        <label for="" class="form-label">
+                            Height
+                        </label>
+                        <input type="number" class="form-control" name="height" id="height" placeholder="Height">
+                    </div>
+                    <!-- weight -->
+                    <div class="mb-3">
+                        <label for="" class="form-label">
+                            Weight
+                        </label>
+                        <input type="number" class="form-control" name="weight" id="weight" placeholder="Weight">
+                    </div>
+
                     
                     <!-- Submit -->
                     <div class="mb-3">
