--- a/ShipRocketAPI/index.html
+++ b/ShipRocketAPI/index.html
@@ -435,8 +435,22 @@
                             <!-- get all order details button -->
                             <button id="getAllOrderDetailsBtn" type="submit" class="btn btn-success">Get All Order
                                 Details</button>
-
                         </div>
+
+                        <!-- Get tracking through AWB -->
+                        <div class="mb-3">
+                            <label for="" class="form-label">
+                                Enter AWB No.
+                            </label>
+                            <input type="number" class="form-control" name="awb_no" id="awb_no" placeholder="AWB No.">
+                        </div>
+                        <!-- Get Tracking Btn -->
+                        <div class="mb-3">
+                            <button id="getTrackingBtn" type="submit" class="btn btn-primary">Get Tracking</button>
+                        </div>
+
+                        
+                        
 
                     </form>
                 </div>
